--- a/gb/23/9/21/n14078235.md
+++ b/gb/23/9/21/n14078235.md
@@ -1,83 +1,74 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【翻墙必看】胡锡进股票亏大了 炒股目的受疑</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/04/id13690112-GettyImages-1149124286-600x400.jpg" />
 <h6>胡锡进资料图。（Gilles Sabrie/Bloomberg via Getty Images）
 </h6>
 <hr>
 	<p>【大纪元2023年09月21日讯】大纪元每天为读者梳理翻墙必看的文章：</p>
-<p>1.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078035.md#1" target="_blank" rel="noopener noreferrer">中国股市成交额创新低 胡锡进炒股继续亏损</a></b><br />
-近期，中国股市持续震荡下行。周二（20日），沪深两市全天成交总额创下年内新低。当日，中共官媒《环球时报》前总编辑<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%A1%E9%94%A1%E8%BF%9B.md#1">胡锡进</a>再报亏损记录，其入市不足三个月总亏损额已超过一万四千元。</p>
-<p>2.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077912.md#1" target="_blank" rel="noopener noreferrer">中国锗镓零出口 专家：中共禁令是双刃剑</a></b><br />
+<p>1.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14078035.md#1" target="_blank" rel="noopener noreferrer">中国股市成交额创新低 胡锡进炒股继续亏损</a></b><br />
+近期，中国股市持续震荡下行。周二（20日），沪深两市全天成交总额创下年内新低。当日，中共官媒《环球时报》前总编辑胡锡进再报亏损记录，其入市不足三个月总亏损额已超过一万四千元。</p>
+<p>2.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077912.md#1" target="_blank" rel="noopener noreferrer">中国锗镓零出口 专家：中共禁令是双刃剑</a></b><br />
 中共自8月1日起对关键金属镓和锗实施出口管制。但最新数据显示，镓和锗8月出口量骤降至零，价格也走跌。专家认为，中共禁令是双刃剑，想跟美国讨价还价，但很可能加速产业链转移，得不偿失。</p>
-<p>3.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078084.md#1" target="_blank" rel="noopener noreferrer">王友群：周恩来原女秘书杨刚为何自杀？</a></b><br />
+<p>3.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14078084.md#1" target="_blank" rel="noopener noreferrer">王友群：周恩来原女秘书杨刚为何自杀？</a></b><br />
 1957年10月7日晨，杨刚被人发现死于她在北京煤渣胡同的《人民日报》社宿舍内。她是服过量安眠药而死，时年52岁。</p>
-<p>4.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078126.md#1" target="_blank" rel="noopener noreferrer">杭州亚运前 传习秘访义乌 安保布局引关注</a></b><br />
+<p>4.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/21/n14078126.md#1" target="_blank" rel="noopener noreferrer">杭州亚运前 传习秘访义乌 安保布局引关注</a></b><br />
 9月23日，亚运会将在浙江杭州开幕。20日，网上传出据称是习近平视察浙江义乌的视频。消息显示，当地封路，特斯拉被限行，路上下水道盖子也被上锁。</p>
-<p>5.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077505.md#1" target="_blank" rel="noopener noreferrer">中国6省市现异象 成都现“飞龙在天”景象</a></b><br />
+<p>5.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077505.md#1" target="_blank" rel="noopener noreferrer">中国6省市现异象 成都现“飞龙在天”景象</a></b><br />
 最近一个月，中国至少6省（市）的天空或湖中接连出现异象。四川天空现“飞龙在天”景象，江苏天空出现红光，山东济南天空三次出现不明飞行物，上海天空坠下不明物体，新疆天池湖中出现疑似“银龙”的不明生物等。</p>
-<p>6.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078107.md#1" target="_blank" rel="noopener noreferrer">大陆首个一线城市部分放松楼市限购</a></b><br />
+<p>6.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/21/n14078107.md#1" target="_blank" rel="noopener noreferrer">大陆首个一线城市部分放松楼市限购</a></b><br />
 9月20日，广州市政府办公厅发布了《关于优化我市房地产市场平稳健康发展政策的通知》，宣布放松部分区域的楼市限购等。而在8月份，该市新房成交下跌了32%。</p>
-<p>7.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077694.md#1" target="_blank" rel="noopener noreferrer">岳山：红二代大佬张又侠是中国版普里戈津？</a></b><br />
+<p>7.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077694.md#1" target="_blank" rel="noopener noreferrer">岳山：红二代大佬张又侠是中国版普里戈津？</a></b><br />
 外界正在热议习近平“着魔”于安全问题，而枪杆子的安全又是重中之重，故此习最近在黑龙江视察78军时就说要“保持部队高度集中统一和安全稳定”。习为确保掌军“安全稳定”，一个大手笔是在二十大破例留用73岁的老将张又侠，另一个大动作是最近开始了军内大清洗。但随着火箭军高层和国防部长李尚福出事，习疑心越来越大，他会不会担心张又侠日后是中国版普里戈津？</p>
-<p>8.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077465.md#1" target="_blank" rel="noopener noreferrer">“干净世界”为大陆网红博主打开一片新天地</a></b><br />
+<p>8.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077465.md#1" target="_blank" rel="noopener noreferrer">“干净世界”为大陆网红博主打开一片新天地</a></b><br />
 “作为一个自媒体人，最关键的是什么？就是你能够把想说的话，在网络平台上自由地表达。”网红博主文女士说。</p>
-<p>9.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077646.md#1" target="_blank" rel="noopener noreferrer">预制菜进大陆校园 家长强烈抵制 网民炮轰</a></b><br />
+<p>9.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077646.md#1" target="_blank" rel="noopener noreferrer">预制菜进大陆校园 家长强烈抵制 网民炮轰</a></b><br />
 在中共中央一号文件加持下，预制菜产业迅猛发展。近日，预制菜进校园的话题引发极大争议，家长、民众对监管完全不信任，坚决反对预制菜进校园。</p>
-<p>10.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078029.md#1" target="_blank" rel="noopener noreferrer">“中共恶人榜”发起人：公民情报系统抑恶扬善</a></b><br />
+<p>10.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14078029.md#1" target="_blank" rel="noopener noreferrer">“中共恶人榜”发起人：公民情报系统抑恶扬善</a></b><br />
 由海内外华人志愿者建立的中共恶人榜征集中心，正在发挥越来越大的影响力。发起人林生亮认为，提高作恶成本，抑制作恶动机，才能真正地抑恶扬善。</p>
-<p>11.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077691.md#1" target="_blank" rel="noopener noreferrer">江苏龙卷风肆虐 多人死伤 画面如末日电影</a></b><br />
+<p>11.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077691.md#1" target="_blank" rel="noopener noreferrer">江苏龙卷风肆虐 多人死伤 画面如末日电影</a></b><br />
 近日，中国江苏省宿迁市和盐城市接连遭遇超强龙卷风，造成至少10人死亡、8人受伤。不少民众近距离拍到强龙卷风所到之处的恐怖场面，龙卷风破坏力惊人，犹如末日电影。</p>
-<p>12.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077800.md#1" target="_blank" rel="noopener noreferrer">访民叶钟失联 曾举报福州政府违建房设黑牢</a></b><br />
+<p>12.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077800.md#1" target="_blank" rel="noopener noreferrer">访民叶钟失联 曾举报福州政府违建房设黑牢</a></b><br />
 福建省福州市访民叶钟参加“912福州鞭炮案”聚餐被警方带走后失联。此前，他曾向大纪元披露，他正在举报福州市政府在立交桥下的违建房设黑牢。</p>
-<p>13.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077773.md#1" target="_blank" rel="noopener noreferrer">江西高官龚建华获刑15年 曾给苏荣送钱财</a></b><br />
+<p>13.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077773.md#1" target="_blank" rel="noopener noreferrer">江西高官龚建华获刑15年 曾给苏荣送钱财</a></b><br />
 9月19日，江西省人大常委会前副主任、南昌前市委书记龚建华因受贿罪被判刑15年，罚款550万元人民币。龚建华被指曾给江西前省委书记苏荣送钱物。</p>
-<p>14.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077932.md#1" target="_blank" rel="noopener noreferrer">加拿大今年目击UFO事件 多伦多最多</a></b><br />
+<p>14.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077932.md#1" target="_blank" rel="noopener noreferrer">加拿大今年目击UFO事件 多伦多最多</a></b><br />
 如今天上飞的，不再只是鸟儿和飞机，还有流星、敌国间谍气球甚至不明飞行物（UFO）。</p>
-<p>15.<b><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077991.md#1" target="_blank" rel="noopener noreferrer">维护台海安全 美加强对中共侵台威慑</a></b><br />
+<p>15.<b><ahref="https://github.com/1992513/djy/blob/master/gb/23/9/20/n14077991.md#1" target="_blank" rel="noopener noreferrer">维护台海安全 美加强对中共侵台威慑</a></b><br />
 美国国会众议院军事委员会周二（9月19日）举行听证会，负责印度-太平洋安全事务的助理国防部长伊利?拉特纳（Ely Ratner）说，国防部正在与其它政府机构、盟友和朋友合作，加强在台湾海峡的威慑，以阻止中共入侵台湾，确保印太地区的和平与繁荣。</p>
 <p>责任编辑：方晓</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081691.md#1">涉新疆强迫劳动 三中企再被美列入实体清单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081498.md#1">【中国观察】中共七常委之间的内斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081616.md#1">韩日中高官会议：尽早重启三国领导人峰会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081538.md#1">台智库荣誉董事长：失去希望正成中国最大问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307796.md#1">【翻墙必看】中国几个反常现象令民众担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307787.md#1">天津债务危机严峻 中共多部委异常出手相救</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307788.md#1">《北青报》批“掼蛋”遭众官媒围攻 引发热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/8/n10202468.md#1" target="_blank">林辉：“爱有阶级性”后的人伦惨剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/17/n10064050.md#1" target="_blank">袁斌：由谍战剧《风筝》说到中共特工的命运</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/5/n3675948.md#1" target="_blank">中共酷刑：对伤口的摧残</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076236.md#1">【未解之谜】《推背图》46象 即将应验的预言？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14078897.md#1">【未解之谜】魏斯博士（上）看到地球未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074471.md#1">仁心君子：救助仇人活命  不爱宰相高位爱真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075537.md#1">秋分：彼岸日 天地阴阳调和</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020684.md#1">流落香港的“菠萝油公主”  天涯海角总有人伴你“等风来”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081108.md#1">【传统音乐】神韵乐团七团 室内乐及独奏音乐会 | 首播：2023年9月30日 晚间8:00</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080736.md#1">【环球直击】韩日中正式磋商恢复领导人峰会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081143.md#1">【热点互动】中共大搞“亚运外交”不计成本</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080182.md#1">中共耗资2千亿办亚运 《杭州，为你羞耻》再传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080303.md#1">世界上最古老的木结构建筑早于人类文明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079877.md#1">邓朴方去职 习近平或对更多太子党开刀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080019.md#1">徐新洋大婚宴开35桌 徐乃麟买单喊话想抱孙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080305.md#1">范冰冰任西班牙影展评审 开幕红毯造型成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080342.md#1">为何不上常驻综艺？刘诗诗回应获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080166.md#1">简廷芮大婚感动洒泪 新郎晒甜蜜：眼里只有她</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080359.md#1">睽违4年返港 吴彦祖自曝遭爱女揶揄不再当红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074775.md#1">他一年甩30公斤 脂肪肝消失 秘诀是吃2种食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061511.md#1">忧郁症是心灵感冒 中医师建议从三方面入手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075086.md#1">他汀药物具鲜为人知危险  1种维生素可完美代替</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079734.md#1">美国面临缺房危机 后院运动正在兴起</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080133.md#1">如何加速新陈代谢来减肥？ 专家教你三招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309864.md#1">【漂流传奇】荣耀背后的影坛传奇许鞍华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/21/n14078235.htm">【翻墙必看】胡锡进股票亏大了 炒股目的受疑</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078235.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/21/n14078235.htm">【翻墙必看】胡锡进股票亏大了 炒股目的受疑</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/21/n14078235.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
